# spivey

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  Pipfile  README.md  setup.cfg
package/: module.py
spivey/: __init__.py  auth.py
tdoptions/: __init__.py  auth.py  http.py  td.py
tests/: test_auth.py  test_client.py  test_http.py  test_module.py  test_td.py
