[metadata]
name = spivey
version = 0.1
author = Alex Creek
author_email = me@alexcreek.com
description = Fetch options chains from tdameritrade
url = https://github.com/alexcreek/spivey
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests >=2.26,<3.0

[options.packages.find] #optional
exclude=tests
